table rowspan & colspan fixes + business-drive header z-index fix

--- a/src/css/components/tabs.styl
+++ b/src/css/components/tabs.styl
@@ -148,13 +148,17 @@
 .{newAppName}-tabs-navigation-wrapper
   .rt-tabs-tablet &,
   .rt-tabs-mobile &
-    width: 100vw
-    margin-left calc((100% - 100vw)/2)
+    width: 100%
+    //margin-left calc((100% - 100vw)/2)
     position: relative
     left 0
     overflow: auto
     &::-webkit-scrollbar
       display: none
+  .rt-tabs-tablet &
+    margin-left -40px
+  .rt-tabs-mobile &
+    margin-left -20px
 
 .{newAppName}-tabs-navigation__item
   //padding-left vertical-space
